Created register page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="dark-green">
     <header>
       <div class="container passion">
         <div class="passion">
@@ -36,16 +36,19 @@
           </p>
           <div class="d-flex-inline gap-5 mb-5 col-12">
             <button
-              class="btn btn-primary px-5 btn-lg device-width rounded-pill text-center mx-3"
-              type="button"
-            >
-              Logowanie</button
-            ><button
               class="btn btn-primary px-5 btn-lg rounded-pill text-center mx-3"
               type="button"
             >
-              Rejestracja
+              Logowanie
             </button>
+            <a href="./register.html"
+              ><button
+                class="btn btn-primary px-5 btn-lg rounded-pill text-center mx-3"
+                type="button"
+              >
+                Rejestracja
+              </button></a
+            >
           </div>
         </div>
       </div>
@@ -56,6 +59,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
