Added login page

--- a/index.html
+++ b/index.html
@@ -35,12 +35,15 @@
             Zapanuj nad swoimi finansami już dziś!
           </p>
           <div class="d-flex-inline gap-5 mb-5 col-12">
-            <button
-              class="btn btn-primary px-5 btn-lg rounded-pill text-center mx-3"
-              type="button"
+            <a href="./login.html"
+              ><button
+                class="btn btn-primary px-5 btn-lg rounded-pill text-center mx-3"
+                type="button"
+              >
+                Logowanie
+              </button></a
             >
-              Logowanie
-            </button>
+
             <a href="./register.html"
               ><button
                 class="btn btn-primary px-5 btn-lg rounded-pill text-center mx-3"
