--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
       </div>
     </main>
 
+    <footer class="my-5 pt-5 text-body-secondary text-center text-small">
+      <p class="mb-1">© 2024 By Damian Molter</p>
+    </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
