Added dropdown menu

--- a/summary.html
+++ b/summary.html
@@ -26,26 +26,47 @@
         >
           <ul class="nav nav-pills">
             <li class="nav-item">
-              <a href="#" class="nav-link py-3">Dodaj przychód</a>
+              <a href="./income.html" class="nav-link py-3">Dodaj przychód</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link py-3">Dodaj wydatek</a>
+              <a href="./expense.html" class="nav-link py-3">Dodaj wydatek</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link py-3">Przeglądaj bilans</a>
+              <a href="./summary.html" class="nav-link py-3"
+                >Przeglądaj bilans</a
+              >
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link py-3">Ustawienia</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link py-3">Wyloguj</a>
+              <a href="./index.html" class="nav-link py-3">Wyloguj</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    
+    <header>
+      <div class="container">
+        <div class="dropdown">
+          <button
+            class="btn btn-secondary dropdown-toggle"
+            type="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Dropdown button
+          </button>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Bieżący miesiąc</a></li>
+            <li><a class="dropdown-item" href="#">Poprzedni miesiąc</a></li>
+            <li><a class="dropdown-item" href="#">Bieżący rok</a></li>
+            <li><a class="dropdown-item" href="#">Niestandardowy okres</a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
