--- a/expense.html
+++ b/expense.html
@@ -26,19 +26,19 @@
         >
           <ul class="nav nav-pills">
             <li class="nav-item">
-              <a href="#" class="nav-link py-3">Dodaj przychód</a>
+              <a href="./income.html" class="nav-link py-3">Dodaj przychód</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link py-3">Dodaj wydatek</a>
+              <a href="./expense.html" class="nav-link py-3">Dodaj wydatek</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link py-3">Przeglądaj bilans</a>
+              <a href="./summary.html" class="nav-link py-3">Przeglądaj bilans</a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link py-3">Ustawienia</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link py-3">Wyloguj</a>
+              <a href="./index.html" class="nav-link py-3">Wyloguj</a>
             </li>
           </ul>
         </div>
