--- a/summary.html
+++ b/summary.html
@@ -62,11 +62,29 @@
             <li><a class="dropdown-item" href="#">Bieżący miesiąc</a></li>
             <li><a class="dropdown-item" href="#">Poprzedni miesiąc</a></li>
             <li><a class="dropdown-item" href="#">Bieżący rok</a></li>
-            <li><a class="dropdown-item" href="#">Niestandardowy okres</a></li>
+            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Something else here</a></li>
           </ul>
         </div>
       </div>
     </header>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
