--- a/summary.html
+++ b/summary.html
@@ -72,15 +72,22 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+            <h4 class="modal-title fs-5" id="exampleModalLabel">Wybierz przedział czasowy</h4>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            ...
+            <div>
+                  <h5>Początek okresu:</h5>
+                  <input id="startDate" class="form-control" type="date" />
+            </div>
+            <div>
+                  <h5>Koniec okresu:</h5>
+                  <input id="endDate" class="form-control" type="date" />
+            </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Anuluj</button>
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Akceptuj</button>
           </div>
         </div>
       </div>
