--- a/summary.html
+++ b/summary.html
@@ -48,6 +48,10 @@
     </nav>
 
     <header>
+      <div class="text-center"><h1>Twój Bilans</h1></div>
+    </header>
+
+    <main>
       <div class="container">
         <div class="dropdown">
           <button
@@ -62,36 +66,122 @@
             <li><a class="dropdown-item" href="#">Bieżący miesiąc</a></li>
             <li><a class="dropdown-item" href="#">Poprzedni miesiąc</a></li>
             <li><a class="dropdown-item" href="#">Bieżący rok</a></li>
-            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Something else here</a></li>
+            <li>
+              <a
+                class="dropdown-item"
+                href="#"
+                data-bs-toggle="modal"
+                data-bs-target="#customPeriod"
+                >Okres niestandardowy</a
+              >
+            </li>
           </ul>
         </div>
-      </div>
-    </header>
 
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h4 class="modal-title fs-5" id="exampleModalLabel">Wybierz przedział czasowy</h4>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <div>
+        <div
+          class="modal fade"
+          id="customPeriod"
+          tabindex="-1"
+          aria-labelledby="exampleModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title fs-5" id="exampleModalLabel">
+                  Wybierz przedział czasowy
+                </h4>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body">
+                <div>
                   <h5>Początek okresu:</h5>
                   <input id="startDate" class="form-control" type="date" />
-            </div>
-            <div>
+                </div>
+                <div>
                   <h5>Koniec okresu:</h5>
                   <input id="endDate" class="form-control" type="date" />
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Anuluj
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-primary"
+                  data-bs-dismiss="modal"
+                >
+                  Akceptuj
+                </button>
+              </div>
             </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Anuluj</button>
-            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Akceptuj</button>
           </div>
         </div>
       </div>
-    </div>
+
+      <div class="container table">
+        <div>
+          <h2>Tabela przychodów</h2>
+          <table class="table table-hover">
+            <tr class="odd-row col-title">
+              <td>Kategoria</td>
+              <td>Kwota (PLN)</td>
+            </tr>
+            <tr class="even-row">
+              <td>Wynagrodzenie</td>
+              <td>4300</td>
+            </tr>
+            <tr class="odd-row">
+              <td>Odsetki bankowe</td>
+              <td>20</td>
+            </tr>
+            <tr class="even-row">
+              <td>Sprzedaż na allegro</td>
+              <td>200</td>
+            </tr>
+            <tr class="odd-row col-title">
+              <td>Suma</td>
+              <td>4520</td>
+            </tr>
+          </table>
+        </div>
+        <div><h2>Tabela Wydatków</h2>
+          <table class="table table-hover">
+            <tr class="odd-row col-title">
+              <td>Kategoria</td>
+              <td>Kwota (PLN)</td>
+            </tr>
+            <tr class="even-row">
+              <td>Jedzenie</td>
+              <td>2000</td>
+            </tr>
+            <tr class="odd-row">
+              <td>Ubrania</td>
+              <td>500</td>
+            </tr>
+            <tr class="even-row">
+              <td>Mieszkanie</td>
+              <td>1000</td>
+            </tr>
+            <tr class="odd-row col-title">
+              <td>Suma</td>
+              <td>3500</td>
+            </tr>
+          </table><div class="table">
+          
+        </div></div>
+      </div>
+    </main>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
