--- a/login.html
+++ b/login.html
@@ -59,9 +59,10 @@
                     <input type="checkbox" value="remember-me"> Zapamiętaj mnie
                   </label>
                 </div>
-                <button class="btn btn-primary px-5 btn-lg rounded-pill text-center mx-3" type="submit">
+                <a href="./summary.html"><button class="btn btn-primary px-5 btn-lg rounded-pill text-center mx-3" type="button">
                   Zaloguj się
-                </button>
+                </button></a>
+                
               
             </form>
           </div>
