--- a/summary.html
+++ b/summary.html
@@ -193,15 +193,15 @@
 
     <hr />
     <aside>
-      <div class="container d-flex justify-content-center"><div id="income-piechart"></div>
-      <div id="expense-piechart"></div></div>
-      
-
+      <div class="container chart d-flex justify-content-center">
+        <div id="income-piechart"></div>
+        <div id="expense-piechart"></div>
+      </div>
     </aside>
     <script
-        type="text/javascript"
-        src="https://www.gstatic.com/charts/loader.js"
-      ></script>
+      type="text/javascript"
+      src="https://www.gstatic.com/charts/loader.js"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
