Added hamburger menu

--- a/summary.html
+++ b/summary.html
@@ -20,7 +20,59 @@
   </head>
   <body>
     <nav>
-      <div class="container d-flex navbar">
+      <div class="container d-flex justify-content-center">
+        <div class="dropdown" id="mobile-menu">
+          <button
+            class="btn btn-secondary-li dropdown-toggle"
+            type="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            <img
+              src="./images/icons8-hamburger-menu-50.png"
+              alt="dropdown menu icon"
+            />
+          </button>
+          <ul class="dropdown-menu">
+            <li>
+              <button class="dropdown-item" type="button">
+                <a href="./income.html" class="nav-link py-3"
+                  >Dodaj przychód</a
+                >
+              </button>
+            </li>
+            <li>
+              <button class="dropdown-item" type="button">
+                <a href="./expense.html" class="nav-link py-3"
+                  >Dodaj wydatek</a
+                >
+              </button>
+            </li>
+            <li>
+              <button class="dropdown-item" type="button">
+                <a href="./summary.html" class="nav-link py-3"
+                  >Przeglądaj bilans</a
+                >
+              </button>
+            </li>
+            <li>
+              <button class="dropdown-item" type="button">
+                <a href="#" class="nav-link py-3"
+                  >Ustawienia</a
+                >
+              </button>
+            </li>
+            <li>
+              <button class="dropdown-item" type="button">
+                <a href="./contact.html" class="nav-link py-3"
+                  >Wyloguj</a
+                >
+              </button>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="container navbar">
         <div
           class="d-flex justify-content-center align-items-center py-3 dark-green"
         >
@@ -48,7 +100,7 @@
     </nav>
 
     <header>
-      <div class="text-center"><h1>Twój Bilans</h1></div>
+      <div class="text-center pt-5"><h1>Twój Bilans</h1></div>
     </header>
 
     <main>
@@ -60,7 +112,7 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            Dropdown button
+            Niestandardowy
           </button>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Bieżący miesiąc</a></li>
