--- a/summary.html
+++ b/summary.html
@@ -115,12 +115,12 @@
             Niestandardowy
           </button>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Bieżący miesiąc</a></li>
-            <li><a class="dropdown-item" href="#">Poprzedni miesiąc</a></li>
-            <li><a class="dropdown-item" href="#">Bieżący rok</a></li>
+            <li><a class="nav-link py-3" href="#">Bieżący miesiąc</a></li>
+            <li><a class="nav-link py-3" href="#">Poprzedni miesiąc</a></li>
+            <li><a class="nav-link py-3" href="#">Bieżący rok</a></li>
             <li>
               <a
-                class="dropdown-item"
+                class="nav-link py-3"
                 href="#"
                 data-bs-toggle="modal"
                 data-bs-target="#customPeriod"
