--- a/summary.html
+++ b/summary.html
@@ -64,7 +64,7 @@
             </li>
             <li>
               <button class="dropdown-item" type="button">
-                <a href="./contact.html" class="nav-link py-3"
+                <a href="./index.html" class="nav-link py-3"
                   >Wyloguj</a
                 >
               </button>
