--- a/login.html
+++ b/login.html
@@ -35,13 +35,14 @@
             </blockquote>
           </div>
           <div class="col-md-10 mx-auto col-lg-5">
-            <form class="p-4 p-md-5 border rounded-5 bg-body-tertiary">
+            <form action="login-verify.php" class="p-4 p-md-5 border rounded-5 bg-body-tertiary" method="post">
               <div class="form-floating mb-3">
                 <input
                   type="email"
                   class="form-control"
                   id="floatingInput"
                   placeholder="name@example.com"
+                  name="email"
                 />
                 <label for="floatingInput">Email</label>
               </div>
@@ -51,6 +52,7 @@
                   class="form-control"
                   id="floatingPassword"
                   placeholder="Hasło"
+                  name="password"
                 />
                 <label for="floatingPassword">Hasło</label>
               </div>
@@ -59,9 +61,9 @@
                     <input type="checkbox" value="remember-me"> Zapamiętaj mnie
                   </label>
                 </div>
-                <a href="./summary.html"><button class="btn btn-primary px-5 btn-lg rounded-pill text-center mx-3" type="button">
+                <button class="btn btn-primary px-5 btn-lg rounded-pill text-center mx-3" type="submit">
                   Zaloguj się
-                </button></a>
+                </button>
                 
               
             </form>
